[PLAT-7269] Added a retry for ModifyMasterClusterConfig on config version mismatch
Summary:
We found some cases where we would hit a config version mismatch when
attempting to modify the cluster config due to a config version mismatch.
This mismatch will happen if the passed in config "version" doesn't match the
current config version  - for instance, th;e current config got changed
between the read/write of our new, updated config.

Adding a simple retry should allow us to re-get the update config, with the
correct version value, modify it, and set it to the modified value.

Test Plan:
Ran UTs
Blacklisted a leader, and validated it went through as expected

Reviewers: sb-yb, nsingh

Reviewed By: sb-yb, nsingh

Subscribers: jenkins-bot, yugaware, sb-yb, nbhatia, sanketh, nsingh

Differential Revision: https://phabricator.dev.yugabyte.com/D23079

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -815,6 +815,11 @@ ybc {
     node_batch_size = 15,
     allow_scheduled_upgrade = true
   }
+  timeout {
+    admin_operation_timeout_ms = 120000
+    socket_read_timeout_ms = 30000
+    operation_timeout_ms = 60000
+  }
 }
 
 runtime_config {
