--- a/managed/devops/replicated.yml
+++ b/managed/devops/replicated.yml
@@ -422,7 +422,7 @@ components:
             container_path: /prometheus_configs
         env_vars:
           - name: JAVA_OPTS
-            static_val: '-XX:PermSize=1024m -XX:MaxPermSize=1024m'
+            static_val: '-XX:PermSize=1024m -XX:MaxPermSize=1024m {{repl if ConfigOptionEquals "enable_proxy" "1"}} -Dhttp.nonProxyHost={{repl ConfigOption "java_non_proxy"}} -Dhttp.proxyHost={{repl ConfigOption "java_http_proxy_host"}} -Dhttp.proxyPort={{repl ConfigOption "java_http_proxy_port"}} -Dhttps.proxyHost={{repl ConfigOption "java_https_proxy_host"}} -Dhttps.proxyPort={{repl ConfigOption "java_https_proxy_port"}}{{repl end}}'
           - name: HTTP_PROXY
             value: '{{repl ConfigOption "http_proxy"}}'
             when: '{{repl ConfigOptionEquals "enable_proxy" "1"}}'
@@ -430,6 +430,15 @@ components:
             value: '{{repl ConfigOption "https_proxy"}}'
             when: '{{repl ConfigOptionEquals "enable_proxy" "1"}}'
           - name: NO_PROXY
+            value: '{{repl ConfigOption "no_proxy"}}'
+            when: '{{repl ConfigOptionEquals "enable_proxy" "1"}}'
+          - name: http_proxy
+            value: '{{repl ConfigOption "http_proxy"}}'
+            when: '{{repl ConfigOptionEquals "enable_proxy" "1"}}'
+          - name: https_proxy
+            value: '{{repl ConfigOption "https_proxy"}}'
+            when: '{{repl ConfigOptionEquals "enable_proxy" "1"}}'
+          - name: no_proxy
             value: '{{repl ConfigOption "no_proxy"}}'
             when: '{{repl ConfigOptionEquals "enable_proxy" "1"}}'
         ports:
@@ -742,17 +751,47 @@ config:
         type: text
         default: '{{repl ConsoleSetting "http.proxy"}}'
         when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
+      - name: java_http_proxy_host
+        title: HTTP Proxy host setting for Java
+        help_text: Specify -Dhttp.proxyHost
+        type: text
+        # default: TODO extract host out of http.proxy
+        when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
+      - name: java_http_proxy_port
+        title: HTTP Proxy Port setting for Java
+        help_text: Specify -Dhttp.proxyPort
+        type: text
+        # default: TODO extract host out of http.proxy
+        when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
       - name: https_proxy
         title: HTTPS Proxy setting
         help_text: Specify the setting for HTTPS_PROXY
         type: text
         default: '{{repl ConsoleSetting "http.proxy"}}'
         when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
+      - name: java_https_proxy_host
+        title: HTTPS Proxy host setting for Java
+        help_text: Specify -Dhttps.proxyHost
+        type: text
+        # default: TODO extract host out of http.proxy
+        when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
+      - name: java_https_proxy_port
+        title: HTTPS Proxy Port setting for Java
+        help_text: Specify -Dhttps.proxyPort
+        type: text
+        # default: TODO extract host out of http.proxy
+        when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
       - name: no_proxy
         title: HTTP no proxy setting
         help_text: Specify the setting for NO_PROXY
         type: text
         default: ""
+        when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
+      - name: java_non_proxy
+        title: HTTP Proxy Port setting for Java
+        help_text: Specify  -Dhttps.nonProxyHosts.
+        type: text
+        # default: TODO extract host out of http.proxy
         when: '{{repl ConfigOptionEquals "enable_proxy" "1" }}'
       - name: tls_version
         title: TLS Versions
