--- a/managed/support/packages/prometheus.yml
+++ b/managed/support/packages/prometheus.yml
@@ -110,6 +110,10 @@ scrape_configs:
      regex: "node_disk_bytes_written"
      target_label: "__name__"
      replacement: "node_disk_written_bytes_total"
+   - source_labels: ["__name__"]
+     regex: "node_boot_time"
+     target_label: "__name__"
+     replacement: "node_boot_time_seconds"
    # saved_name relabel goes last to get correct label names after above relabels
    - source_labels: ["__name__"]
      regex: "(.*)"
