[BACKPORT 2.14] Set up chrony correctly during AMI build process
Summary:
During the process of building the AMIs, we don't
set up chrony, so the server defaults to the public pool of
servers for NTP configuration. This means, that nodes
in some clusters can be always lagging if the NTP servers
are different.

Test Plan: N/A

Reviewers: dskorobogaty, daniel, sanketh

Reviewed By: daniel

Subscribers: yugaware, jenkins-bot, muthu

Differential Revision: https://phabricator.dev.yugabyte.com/D23292

--- a/managed/devops/roles/provision-cluster-server/defaults/main.yml
+++ b/managed/devops/roles/provision-cluster-server/defaults/main.yml
@@ -6,7 +6,7 @@
 #
 # https://github.com/YugaByte/yugabyte-db/blob/master/licenses/POLYFORM-FREE-TRIAL-LICENSE-1.0.0.txt
 
-use_chrony: false
+use_chrony: true
 air_gap: false
 systemd_option: false
 yb_home_dir: "/home/{{ user_name }}"
