[PLAT-7396] Update on-prem manual provisioning pre-flight checks to ensure that the vm.max_map_count is 256k before adding the node to on-prem provider
Summary:
Add preflight check for virtual memory max map count. Fixed an issue where PrecheckNodeDetached was using SSH only when node-agent was configured.

Preflight check (on-prem manually configured nodes) for https://phabricator.dev.yugabyte.com/D23016

Test Plan:
Tested manually the below cases:

1. Create a Universe with an unconfigured on-prem node. The particular preflight check was not run as sudo access is given to modify it.
2. Create a Universe with a manually configured on-prem node. Preflight check failed when the value was set too low, otherwise it worked and the creation was successful.
3. Manually ran detached preflight-check (action drop down). Both passed. The node agent issue was found and fixed.

Reviewers: nbhatia, sanketh, cwang, dshubin

Reviewed By: cwang, dshubin

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23231

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -720,6 +720,7 @@ yb {
       ulimit_user_processes = 12000
       swappiness = 0
       ssh_timeout = 10
+      vm_max_map_count = 262144
     }
     releases {
         # Path to the node-agent releases.
