[Backport 2.17.2] [PLAT-7523] Handle system specific systemd units in SLES
Summary:
SLES stores systemd units under /usr/lib/systemd/system instead of
/lib/systemd/system. We noticed that in all OSs both these directories
are mirror images and therefore while introducing support for SLES
we referred to /user/lib/systemd/system for system units. However,
we found that Ubuntu 18 was an exception in which /usr/lib/systemd/system
didn't exist.

This change reverts back to using /lib/systemd/system for all OSs.
We dynamically change the systemd unit base directory in SLES to
/usr/lib/systemd/system.

Note that this will also need a corresponding change in ansible-prometheus
repository which we'll make in a separate commit via this PR
https://github.com/yugabyte/ansible-prometheus/pull/8

Test Plan: Created 1-node universe on SLES/Ubuntu-20/Ubuntu-18/Alma/Centos

Reviewers: muthu

Reviewed By: muthu

Subscribers: yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D23293

--- a/managed/devops/roles/configure-cluster-server/tasks/prepare-configure-server.yml
+++ b/managed/devops/roles/configure-cluster-server/tasks/prepare-configure-server.yml
@@ -16,6 +16,11 @@
     mount_cores_dir: "{{ _mount_points[0] }}/cores"
   tags: always
 
+- set_fact:
+    systemd_unit_dir: "/usr/lib/systemd/system"
+  when: ansible_distribution == "SLES"
+  tags: always
+
 - name: Configure | Add yb server ctl script
   vars:
     mount_paths: "{{ _mount_points | join(' ') }}"
@@ -190,7 +195,7 @@
     # Necessary for yb-master/tserver to be accessible. 'After' in service file.
     - name: Link network-online.target
       shell:
-        cmd: "systemctl --user link /usr/lib/systemd/system/network-online.target"
+        cmd: "systemctl --user link {{ systemd_unit_dir }}/network-online.target"
 
     - name: Start network-online.target
       systemd:
