[BACKPORT 2.14][#7614] DocDB: Add an option to run a major compaction at a fixed interval
Summary:
There are situations in which customers want to be able to schedule major compactions
to run at regular intervals, particularly in situations where a lot of old data has either
expired or can otherwise be removed. This diff creates a new FullCompactionManager, triggered
by a background process in the TSTabletManager, which periodically wakes up, checks if any tablets
need a full compaction and then submits a full compaction if possible. It uses the same mechanism
as the one that schedules major compactions after tablet splits.

Also adds a new piece of file metadata that indicates the last major compaction time for the tablet.

The feature is disabled by default, and is enabled by setting `scheduled_full_compaction_frequency_hours` to
greater than `0`.

Adds the following gflags:
`scheduled_full_compaction_frequency_hours` - how frequently does the background thread check for compactions
`scheduled_full_compaction_jitter_factor_percentage` - determines the jitter percentage used when scheduling full compactions
`scheduled_full_compaction_check_interval_min` - determines the interval at which we check for tablets eligible for compaction
`full_compaction_pool_max_threads` - replaces post_split_trigger_compaction_pool_max_threads
`full_compaction_pool_max_queue_size` - replaces post_split_trigger_compaction_pool_max_queue_size

Removal of RUNTIME flag notations from later versions

Original commit: 8606a4ca2ba3c89fa759fd3eb83b4b1488f0cc3c / D18235

Test Plan:
Jenkins: rebase: 2.14
ybd --cxx-test tserver_ts_tablet_manager-test --gtest_filter TsTabletManagerTest.FullCompactionCalculateNextCompaction
ybd --cxx-test tserver_ts_tablet_manager-test --gtest_filter TsTabletManagerTest.CompactionsEvenlySpreadByJitter
ybd --cxx-test integration-tests_compaction-test --gtest_filter ScheduledFullCompactionsTest.ScheduleWhenExpected
ybd --cxx-test integration-tests_compaction-test --g

--- a/src/yb/tserver/CMakeLists.txt
+++ b/src/yb/tserver/CMakeLists.txt
@@ -190,6 +190,7 @@ add_dependencies(tserver_util gen_proto)
 
 set(TSERVER_SRCS
   db_server_base.cc
+  full_compaction_manager.cc
   heartbeater.cc
   heartbeater_factory.cc
   metrics_snapshotter.cc
