[#13535] xCluster: Add ability to pause and resume replication from the source cluster
Summary:
Fixes #13535
Added the pause_producer_xcluster_streams operation to yb-admin to pause/resume replication over cdc streams from the producer side.

Test Plan:
TwoDCTest.PausingAndResumingReplicationFromProducerSingleTable
TwoDCTest.PausingAndResumingReplicationFromProducerMultiTable

Reviewers: hsunder, jhe

Reviewed By: hsunder, jhe

Subscribers: ybase, bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D22720

--- a/src/yb/master/CMakeLists.txt
+++ b/src/yb/master/CMakeLists.txt
@@ -54,7 +54,8 @@ set(MASTER_YRPC_LIBS
   rpc_header_proto
   tablet_proto
   tserver_proto
-  cdc_consumer_proto)
+  cdc_consumer_proto
+  xcluster_producer_proto)
 ADD_YB_LIBRARY(master_proto
   SRCS ${MASTER_YRPC_SRCS}
   DEPS ${MASTER_YRPC_LIBS}
