[PLAT-5250] Run DB backups in parallel for YBC based backups
Summary:
 - Added ability to take multiple Database backups within a single backup request in parallel.
 - Earlier we had a sequential run of all subtasks - with each subtask corresponding to 1 Database.
 - Now, we create a node-pool which is equal to the parallelism provided by the user. The api param governing this: `parallelDBBackups`.
 - The value is 1 by default, and the maximum value is equal to number of live tservers in the primary cluster.
 - Each subtask starts with an empty value of node-ip to use, i.e. on which node's YB-Controller server this backup request will be sent to. Each task then picks a node-ip from the generated node-pool. A maximum of `parallelDBBackups` subtasks are run in parallel. After completion of task, the node-ip is pt back to the pool, for more subtasks to pick it up.
 - To maintain state across restart and resume the backup, introduced `ParallelBackupState` class, for each keyspace.
  - `node-ip`:  If the subtask was initiated but was not completed, contains the node-ip on which this subtask is running.
  - `alreadyScheduled`: If the subtask already completed, no need to run it again. On doing a resume, this subtask is not put into the subtaskgroup anymore.
  - `currentYbcTaskId`: If the task was initiated and the backup request sent to YBC, maintains it's task-id which is used to poll for it's progress when resuming.

Test Plan:
- Added UTs for node-pool logic.
- Manually verified the scenarios of parallel backup, sequential backup( parallelism 1).
- Manually verified the scenario of resume with parallel backups.

Reviewers: vpatibandla, nsingh

Reviewed By: nsingh

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23064

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -227,6 +227,20 @@ yb {
     max_force_universe_lock_timeout = "1800s"
   }
 
+  backup_task {
+    # initial and minimum number of threads used by each backup task
+    core_threads = 1
+
+    # max number of threads we will grow to if needed before starting to reject tasks
+    max_threads = 40
+
+    # duration for which thread pool will stay inflated before it shrinks back to core_threads
+    thread_ttl = 1 minute
+
+    # capacity of the thread pool queue
+    queue_capacity = 2000
+  }
+
   import {
     # initial and minimum number of threads used by import controller
     core_threads = 1
