[PLAT-7354][PLAT-7242][PLAT-7246]: Promote Auto Flags during software upgrade
Summary:
Added the support to promote auto flag when universe is upgraded from non-auto flag supported version to auto flag supported version.
Added a pre-check for software upgrade to ensure that promoted auto flag in old universe are subset of new version.
Also, Added a check to avoid software upgrade if nodes are in transit mode.

Feature Spec: https://docs.google.com/document/d/12lQ6s3Xn4ZmPtB0efgHth4ntP2lsDRDKF671XoV8nCI/edit#heading=h.yd4k577z1kjx

Test Plan:
Upgrade universe from old version to new supported version and verify that auto flags are promoted.
Upgrade universe from one supported version to another supported version and verify it's successful.
Upgrade universe from non-supported version to another non-supported version and verify it's successful.
Users should not be able to upgrade universe if nodes are in transit mode.

Added and fix existing unit tests

Reviewers: hsunder, sanketh, nbhatia, yshchetinin, cwang

Reviewed By: cwang

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23172

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -409,6 +409,8 @@ yb {
     allow_downgrades=false
     allow_downgrades=${?YB_UPGRADE_ALLOW_DOWNGRADES}
     single_connection_ysql_upgrade=false
+    allow_upgrade_on_transit_universe = false
+    promote_auto_flag = true
   }
   edit {
     wait_for_leaders_on_preferred=true
