[PLAT-7586] Enable Licensing on yba-installer builds
Summary:
All builds by default will now require a license to continue working.
Installs will fail without a valid license.

Test Plan: Tested install with a license

Reviewers: muthu, sanketh

Reviewed By: sanketh

Subscribers: jenkins-bot, yugaware, sanketh, muthu

Differential Revision: https://phabricator.dev.yugabyte.com/D23271

--- a/managed/yba-installer/Makefile
+++ b/managed/yba-installer/Makefile
@@ -7,7 +7,7 @@ VERSION ?= $(shell cat $(CURDIR)/version.txt)
 # go compile options
 GOOS ?= linux
 GOARCH ?= amd64
-BUILD_TYPE := dev
+BUILD_TYPE := preview
 
 
 # build requirements
