[#13580] DocDB: Improve fairness in wait queues
Summary:
The main contribution of this revision is to drastically improve p99 performance of workloads using wait-on-conflict concurrency control under high contention, without harming p50 or average performance under normal amounts of contention. We achieve this by making the following improvements:
1. Force incoming requests to check the wait queue once for active blockers, to ensure incoming requests cannot starve waiting transactions which are racing to exit the wait queue
2. Assign serial numbers to incoming requests, and whenever a batch of waiters can be resumed at the same time, ensure they are resumed roughly in the order in which they arrived at the tserver

Additional enhancements include:
1. Reduce copying by consolidating on using TransactionData everywhere, which is pulled into a conflict_data.h file with associated data structures
2. Populate granular intent information on a sub-transaction basis for use by the wait queue
3. Piggy-back off transaction status request in conflict resolution to obtain status tablet info

Test Plan:
Performance was tested on a 16 core 32gb ram alma8 server with a full-LTO release build. In both cases we used the following set-up:
```
create table test (k int primary key, v int);
insert into test select generate_series(0, 11), 0;
```
In both cases, we also ran ysql_bench as follows:
```
build/latest/postgres/bin/ysql_bench --transactions=2000 --jobs=16 --client=16 --file=workload.sql --progress=1 --debug=fails
```

= First test: Max contention =
`workload.sql`
```
begin;
select * from test where k=1 for update;
commit;
```

Baseline:
```
latency average = 19.779 ms
latency stddev = 26.684 ms
tps = 792.780284 (including connections establishing)
tps = 793.793930 (excluding connections establishing)
```

With revision:
```
latency average = 22.632 ms
latency stddev = 3.266 ms
tps = 705.108285 (including connections establishing)
tps = 705.914647 (excluding connections establish

--- a/src/yb/docdb/CMakeLists.txt
+++ b/src/yb/docdb/CMakeLists.txt
@@ -57,6 +57,7 @@ include_directories("${YB_BUILD_ROOT}/postgres_build/src/include/catalog")
 
 set(DOCDB_SRCS
         bounded_rocksdb_iterator.cc
+        conflict_data.cc
         conflict_resolution.cc
         consensus_frontier.cc
         cql_operation.cc
