[PLAT-7534][PLAT-7525] Make changes in ansible.py to run ansible locally on DB nodes
Summary:
This diff includes the following changes:
- Change ansible.py to offload ansible tasks to the DB nodes or run on yba based on a runtime flag.
- Add runtime config flag to enable/disable ansible offloading.
- Enable ansible offloading only when the node agent version is above the specified version.

Test Plan: Tested Create, Edit, Upgrade, Restart, Upgrade Node Agent workflows multiple times with the ansible offload flag enabled and disabled.

Reviewers: nbhatia, nsingh

Reviewed By: nsingh

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23237

--- a/managed/devops/yb_release_manifest.json
+++ b/managed/devops/yb_release_manifest.json
@@ -20,6 +20,7 @@
     "install-third-party.yml"
   ],
   "bin": [
+    "bin/ansible-playbook.sh",
     "bin/common.sh",
     "bin/install_ansible_requirements.sh",
     "bin/install_python_requirements.sh",
