--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -708,6 +708,11 @@ yb {
         queue_capacity = 1000
     }
 
+    ansible_offloading {
+      enabled = false
+      min_supported_version = "2.17.3.0"
+    }
+
     preflight_checks {
       min_python_version = 2.7
       user = yugabyte
