[PLAT-7561] Retry read write check in case of failure
Summary:
Previously we used to retry ysql read write check up to 2 times in case of failure.
This is needed because the request we're doing may fail because of transaction conflict.
So, we need to retry the request in this case.
Now, we'll mark result as failure so that the check is performed once again - this way we should stop getting read write failure alerts.

Test Plan:
Create universe and leave it created for 1 day.
Make sure read write test alert is not getting fired periodically.

Reviewers: vbansal

Reviewed By: vbansal

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23250

--- a/managed/src/main/resources/health/node_health.py.template
+++ b/managed/src/main/resources/health/node_health.py.template
@@ -1273,9 +1273,7 @@ class NodeChecker():
         self.kill_spawned_postgres_workers()
 
         metric.add_value(0)
-        # It's metric-only check, hence we do set has_error=False to avoid retries -
-        # - as we retried in the check itself
-        return e.fill_and_return_entry([output], has_error=False, metrics=[metric])
+        return e.fill_and_return_entry([output], has_error=True, metrics=[metric])
 
     def check_clock_skew(self):
         logging.info("Checking clock synchronization on node {}".format(self.node))
