[#16265] Rename cdc and twodc to xcluster
Summary:
Rename cdc and twodc to xcluster
Files renamed:
twodc_output_client.h -> xcluster_output_client.h
twodc_output_client.cc -> xcluster_output_client.cc
twodc_write_implementations.h -> xcluster_write_implementations.h
twodc_write_implementations.cc -> xcluster_write_implementations.cc
twodc_write_interface.h -> xcluster_write_interface.h
cdc_output_client_interface.h -> xcluster_output_client_interface.h
cdc_consumer.h -> xcluster_consumer.h
cdc_consumer.cc -> xcluster_consumer.cc
cdc_poller.h -> xcluster_poller.h
cdc_poller.cc -> xcluster_poller.cc

Classes renamed:
TwoDCWriteInterface - > XClusterWriteInterface
cdc::OutputClientResponse -> XClusterOutputClientResponse
cdc::CDCOutputClient -> XClusterOutputClientIf
TwoDCOutputClient -> XClusterOutputClient
CDCClient -> XClusterClient
CDCConsumer -> XClusterConsumer
CDCPoller -> XClusterPoller

Test gFlag TEST_twodc_write_hybrid_time is renamed to TEST_xcluster_write_hybrid_time

Test Plan: All twodc and xcluster tests

Reviewers: rahuldesirazu, jhe

Reviewed By: jhe

Subscribers: ybase, slingam, bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D23233

--- a/src/yb/tserver/CMakeLists.txt
+++ b/src/yb/tserver/CMakeLists.txt
@@ -219,10 +219,10 @@ set(TSERVER_SRCS
   stateful_services/stateful_service_base.cc
   stateful_services/test_echo_service.cc
   xcluster_safe_time_map.cc
-  cdc_consumer.cc
-  cdc_poller.cc
-  twodc_output_client.cc
-  twodc_write_implementations.cc)
+  xcluster_consumer.cc
+  xcluster_poller.cc
+  xcluster_output_client.cc
+  xcluster_write_implementations.cc)
 
 set(TSERVER_DEPS
   protobuf
