[PLAT-7420] Copy node-agent package to the right location when yba-installer is run
Summary:
Copy node_agent-*.tar.gz files to the correct location.

```
(venv) ns-mbp-jmd6n:yugabyte-2.17.3.0-b999920 nkhogen$ pwd
/Users/nkhogen/experiment/yba-installer/yba_installer_full-2.17.3.0-b999920/yugabyte-2.17.3.0-b999920
(venv) ns-mbp-jmd6n:yugabyte-2.17.3.0-b999920 nkhogen$ ls -al
total 2056064
drwxr-xr-x  9 nkhogen  staff        288 Mar  1 12:34 .
drwxr-xr-x  8 nkhogen  staff        256 Mar  1 12:34 ..
-rw-r--r--@ 1 nkhogen  staff  247848622 Mar  1 01:47 devops-2.17.3.0-b999920-centos-x86_64.tar.gz
-rw-r--r--@ 1 nkhogen  staff    8881565 Mar  1 01:47 node_agent-2.17.3.0-b999920-darwin-amd64.tar.gz
-rw-r--r--@ 1 nkhogen  staff    9095369 Mar  1 01:47 node_agent-2.17.3.0-b999920-linux-amd64.tar.gz
-rw-r--r--@ 1 nkhogen  staff    8486447 Mar  1 01:47 node_agent-2.17.3.0-b999920-linux-arm64.tar.gz
-rw-r--r--@ 1 nkhogen  staff  131710252 Mar  1 01:47 yugabundle_support-2.17.3.0-b999920-centos-x86_64.tar.gz
-rw-r--r--@ 1 nkhogen  staff  358703932 Mar  1 01:47 yugabyte-2.17.3.0-b999920-centos-x86_64.tar.gz
-rw-r--r--@ 1 nkhogen  staff  287968123 Mar  1 01:47 yugaware-2.17.3.0-b999920-centos-x86_64.tar.gz
```

Test Plan:
Will test once the build is done.

```
[root@ip-10-9-78-19 yugabyte]# cat software/active/yb-platform/conf/yb-platform.conf  | grep node_agent -A 3
node_agent {
  releases.path = "/opt/yugabyte/data/yb-platform/node-agent/releases"
}

[root@ip-10-9-78-19 yugabyte]# ls /opt/yugabyte/data/yb-platform/node-agent/releases
node_agent-2.17.3.0-b99910204-darwin-amd64.tar.gz  node_agent-2.17.3.0-b99910204-linux-amd64.tar.gz  node_agent-2.17.3.0-b99910204-linux-arm64.tar.gz
```

Reviewers: muthu, cvankayalapati, dshubin, sanketh

Reviewed By: dshubin

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23260

--- a/managed/yba-installer/config/templates/yba-installer-platform.yml
+++ b/managed/yba-installer/config/templates/yba-installer-platform.yml
@@ -105,6 +105,10 @@ services:
         docker.release = "{{ .DataDir }}/ybc/release"
       }
 
+      node_agent {
+        releases.path = "{{ .DataDir }}/node-agent/releases"
+      }
+
       play.filters {
         # CSRF config
         csrf {
