[PLAT-7019]: UI: support core count, mem properties for k8s univs on create and edit page
Summary:
1. Remove Instance type for K8 universe
2. Add memory and cpu text boxeas for create and edit workflow of k8 universe
3. Do not display Master placement option as K8 is already dedciated universe
4. Create new user intent fields for memory and cpu section of K8 universe
5. Create separate section for TServer and Master as we display in dedicated mode today
6. Ensure metrics can be displayed separately for TServer and Master

Test Plan:
Please refer to the screenshot
{F34967}

NOTE: This diff can be merged as it is behind a FF, but for this feature to work end to end, we are dependent on https://phabricator.dev.yugabyte.com/D22858

Reviewers: kkannan, lsangappa, asathyan, jmak

Reviewed By: jmak

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D22934

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -81,6 +81,7 @@ yb {
     show_cost=true
 
     feature_flags {
+      k8s_custom_resources=false
       provider_redesign=false
     }
   }
@@ -325,11 +326,32 @@ yb {
   }
 
   kubernetes {
+    # default volume count for kubernetes
+    default_volume_count = 1
+
     # default volume size for kubernetes instance types
     default_volume_size_gb = 100
 
     # Default kubernetes instance type
     default_instance_type = "small"
+
+    # default memory in gb
+    default_memory_size_gb = 7.5
+
+    # min memory in gb
+    min_memory_size_gb = 2
+
+    # max memory in gb
+    max_memory_size_gb = 128
+
+    # default CPU cores
+    default_cpu_cores = 4
+
+    # min CPU cores
+    min_cpu_cores = 1
+
+    # max CPU cores
+    max_cpu_cores = 32
   }
 
   pwdpolicy {
