[PLAT-6886] Fixing YBA APIs to date RFC3339 format and adding a unit test to prevent future mistakes
Summary:
We have several Date type of fields in the API that do not conform to RFC3339 format.
See D22124 and D21712 for examples.
These fields do not deserailize well in a go client, and end up with errors in terraform provider.
Adding a new unit test that will catch any newly introduced API with this issue.
Also fixing all the instances of Date field.

----

Should be submitted along with D22174

Test Plan:
Unit test.

Also ran all the iTests and found them passing when run along with the diff D22174 to fix one part of the iTest - https://jenkins.dev.yugabyte.com/job/dev-itest-job/4997/
Also ran system itests.

The plan to verify this for YBM is:
 # Run cloud specific platform itests against YBA build which has this change. Land this change once this passes. PASSED, see https://phabricator.dev.yugabyte.com/D22144#648816
 # Pick this YBA version and upgrade canary platforms in YBM dev env and trigger LIT against canary platform --> This is to test YBA <> YBM integration. Fix issues faced with date format as detailed in https://yugabyte.atlassian.net/browse/CLOUDGA-11450

The complete set of iTests for this change is captured here - https://docs.google.com/spreadsheets/d/15Ovo187AwQfBoJLGMKrxr356KBdvhczX7y8romPyjBk/edit?usp=sharing

Reviewers: amalyshev, sb-yb

Reviewed By: amalyshev, sb-yb

Subscribers: amalyshev, jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D22144

--- a/managed/src/main/resources/health/node_health.py.template
+++ b/managed/src/main/resources/health/node_health.py.template
@@ -206,7 +206,7 @@ YB_NODE_CONTROLLER_CHECK = MetricDefinition(
 
 
 def generate_ts():
-    return local_time().strftime('%Y-%m-%d %H:%M:%S')
+    return local_time().strftime('%Y-%m-%dT%H:%M:%SZ')
 
 
 class EntryType:
@@ -218,7 +218,7 @@ class EntryType:
     LABELS = "labels"
     NODE = "node"
     NODE_NAME = "node_name"
-    TIMESTAMP = "timestamp"
+    TIMESTAMP = "timestamp_iso"
     MESSAGE = "message"
     DETAILS = "details"
     METRICS = "metrics"
@@ -422,7 +422,7 @@ class Report:
 
     def as_json(self):
         j = {
-            "timestamp": self.start_ts,
+            "timestamp_iso": self.start_ts,
             "data": [entry.as_json() for entry in self.entries]
         }
         return json.dumps(j, indent=2)
