--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -98,7 +98,7 @@ yb {
     user_tags {
       is_enforced = false
       enforced_tags = []
-      }
+    }
   }
 
   xcluster {
@@ -773,6 +773,10 @@ yb {
 
   kms {
     refresh_interval = 12 hours
+  }
+
+  api {
+    backward_compatible_date = ${yb.cloud.enabled}
   }
 }
 
