[PLAT-7423] Make all inter-container communication go through docker gateway + fix YBA scraping
Summary:
Currently we're using host interface for yugaware<->prometheus communications.
We shouldn't do that.
Hense, we need to make prometheus and yugaware continers be exposed on both docker gateway and host interfaces in Replicated environment.
And we need the rest of the code to use internal/external urls/ips/ports where needed.
Another issue was that prometheus port was hardcoded in some places in backup script - passed configured port everwhere.

As a result - yugaware and prometheus containers will continue to listen on ports 9000/9443 and 9090 on the host interface - for external communications.
But will also listen on ports 9100/9543 and 9190 on docker gateway interface for all inter-container comunications.

Test Plan:
Installed Replicated YBA.
Make sure yugaware and prometheus targets are scraped by Prometheus.
Make sure yugaware queries metrics and alerts from prometheus successfully.
Make sure host IP is used in Prometheus links in YBA UI.

Start YBA locally.
Make sure local prometheus URL is used in links in YBA UI.

Reviewers: vbansal, sanketh, sb-yb

Reviewed By: sb-yb

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23312

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -378,8 +378,12 @@ yb {
   metrics {
     host="localhost"
     port="9090"
-    url = "http://"${yb.metrics.host}":"${yb.metrics.port}"/api/v1"
-    management.url = "http://"${yb.metrics.host}":"${yb.metrics.port}"/-"
+    # Ideally this should not contain path - so that we can build any url out of it,
+    # but for backward compatibility we leave it as is and just replace /api/v1
+    # with other path where needed
+    url = "http://"${yb.metrics.host}":"${yb.metrics.port}/api/v1
+    # Empty means - use url above without /api/v1 suffix
+    external.url = ""
     management.enabled = true
     db_read_write_test = true
     # Scrape target configuration sync interval in seconds.
