--- a/managed/devops/replicated.yml
+++ b/managed/devops/replicated.yml
@@ -241,6 +241,9 @@ components:
         ports:
           - private_port: "9090"
             public_port: '{{repl ConfigOption "prometheus_external_port"}}'
+          - private_port: "9090"
+            public_port: "9190"
+            interface: docker0
         entrypoint: [ "/bin/sh", "-c", "rm -rf /prometheus/lock && \
           cp /prometheus_configs/default_prometheus.yml /prometheus_configs/prometheus.yml && \
           exec /bin/prometheus \
@@ -275,7 +278,7 @@ components:
                   scrape_timeout:  {{repl ConfigOption "prometheus_scrape_timeout"}}
                   static_configs:
                       - targets: [
-                        '{{repl HostPrivateIpAddress "prometheus" "prom/prometheus" }}:{{repl ConfigOption "prometheus_external_port"}}'
+                        '{{repl ConfigOption "docker_gateway" }}:9190'
                       ]
 
                 - job_name: 'platform'
@@ -288,7 +291,7 @@ components:
                   {{repl end}}
                   static_configs:
                     - targets: [
-                      '{{repl ConfigOption "docker_gateway" }}:{{repl if ConfigOptionEquals "https_enabled" "1"}}9443{{repl else}}9000{{repl end}}'
+                      '{{repl ConfigOption "docker_gateway" }}:{{repl if ConfigOptionEquals "https_enabled" "1"}}9543{{repl else}}9100{{repl end}}'
                     ]
 
                 - job_name: "node"
@@ -458,10 +461,20 @@ components:
             public_port: '{{repl ConfigOption "ui_https_port"}}'
             port_type: tcp
             when: '{{repl ConfigOptionEquals "https_enabled" "1"}}'
+          - private_port: "9443"
+            public_port: "9543"
+            port_type: tcp
+            when: '{{repl ConfigOptionEquals "https_enabled" "1"}}'
+            interface: docker0
           - private_port: "9000"
             public_port: '{{repl ConfigOption "ui_http_port"}}'
             port_type: tcp
             when: '{{repl ConfigOptionEquals "http_enabled" "1"}}'
+          - private_port: "9000"
+            public_port: "9100"
+            port_type: tcp
+            when: '{{repl ConfigOptionEquals "http_enabled" "1"}}'
+            interface: docker0
         config_files:
           - filename: /opt/yugabyte/yugaware/conf/server.pem
             contents: |
@@ -529,9 +542,10 @@ components:
 
               yb {
                 devops.home = /opt/yugabyte/devops
-                metrics.host="{{repl HostPrivateIpAddress "prometheus" "prom/prometheus" }}"
-                metrics.port="{{repl ConfigOption "prometheus_external_port"}}"
+                metrics.host = "{{repl ConfigOption "docker_gateway" }}"
+                metrics.port = 9190
                 metrics.scrape_interval = "{{repl ConfigOption "prometheus_scrape_interval" }}"
+                metrics.external.url = "http://{{repl HostPrivateIpAddress "prometheus" "prom/prometheus" }}:{{repl ConfigOption "prometheus_external_port"}}"
                 storage.path = /opt/yugabyte/yugaware/data
                 docker.network = bridge
                 seedData = false
