[#15767] DocDB: Fix some yb_build issues seen with --no-tcmalloc flag
Summary: This change fixes a bunch of undefined symbols/dependencies related issues. These errors are only visible in no-tcmalloc build because we don't allow any undefined symbols in libs. With tcmalloc (default option for CI and local tests), we allow undefined symbols, therefore these issues were not caught during initial review.

Test Plan: Jenkins

Reviewers: rthallam, asrivastava, mbautin, smishra, mihnea

Reviewed By: mbautin

Subscribers: amartsinchyk, rsami, rahuldesirazu, bogdan

Differential Revision: https://phabricator.dev.yugabyte.com/D22425

--- a/src/yb/client/CMakeLists.txt
+++ b/src/yb/client/CMakeLists.txt
@@ -87,7 +87,8 @@ set(CLIENT_LIBS
   yb_util
   gutil
   yrpc
-  yb_docdb_encoding)
+  yb_docdb_encoding
+  yb_docdb_encoding_util)
 
 # We customize the output name/directory of the exported library so that we can
 # call it "yb_client" without it colliding with the regular library.
