--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -75,6 +75,7 @@ yb {
   is_platform_downgrade_allowed=${?YB_IS_PLATFORM_DOWNGRADE_ALLOWED}
   start_master_on_stop_node=true
   edit_provider.new.enabled=false
+  use_spot_instances = false
 
   ui {
     enable_dedicated_nodes=false
