[#15760] Change module name from YugaByte to Yugabyte
Summary: This diff changes the module names to fix a typo in the name of the organization to reflect the latest changes.

Test Plan: Run all existing tests.

Reviewers: steve.varnau

Reviewed By: steve.varnau

Subscribers: ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D23343

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -43,10 +43,10 @@
   <version>0.8.41-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>YugaByte</name>
+  <name>Yugabyte</name>
 
   <description>
-    YugaByte client, YBCli, CQL.
+    Yugabyte client, YBCli, CQL.
   </description>
 
   <!-- Properties Management -->
