[PLAT-7559] Build ansible only pex env
Summary: Build ansible only pex env to reduce the reduce the size of the node-agent.tgz file, resulting in a shorter upload time for node-agent.

Test Plan:
- Created a dev build job (https://jenkins.dev.yugabyte.com/job/dev-build-job/10436/) using devops diff (D23290) and yba diff (D23346) and verified that the repackaged node-agent.tar.gz contains ansible only pex.
- The repackaged node-agent.tgz can be found in this bucket - s3://dev-itest-builds/2.17.3.0-b99910436/
- Created a universe using the repackaged node agent.

Reviewers: muthu, sanketh, nbhatia, nsingh

Reviewed By: nsingh

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23363

--- a/managed/devops/yb_release_manifest.json
+++ b/managed/devops/yb_release_manifest.json
@@ -1,7 +1,9 @@
 {
   ".": [
     "ansible.cfg",
+    "ansible_python3_requirements.txt",
     "ansible_requirements_prod.yml",
+    "build_ansible_pex.sh",
     "configure-cluster-server.yml",
     "destroy-instance.yml",
     "python_requirements_frozen.txt",
