--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -715,6 +715,7 @@ yb {
     connect_timeout = 10 seconds
     poller_interval = 2 minutes
     retention_duration = 30 days
+    max_parallel_upgrades = 30
 
     client {
         enabled = false
