[PLAT-7245]: Add a check to ensure that all DB nodes is on a newer version before promoting new auto flags
Summary: Add a check to ensure that all DB nodes is on a newer version before promoting new auto flags.

Test Plan:
Tested that task fails if the nodes are on different version than the upgraded one.
Added new unit test cases

Reviewers: sanketh, cwang, yshchetinin

Reviewed By: cwang, yshchetinin

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23401

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -417,6 +417,7 @@ yb {
     single_connection_ysql_upgrade=false
     allow_upgrade_on_transit_universe = false
     promote_auto_flag = true
+    promote_flags_forcefully = false
   }
   edit {
     wait_for_leaders_on_preferred=true
