[#16330] DocDB: Move master services and integration-tests out of ent folder
Summary:
The following files have been moved to equivalent src folder:
async_snapshot_tasks.cc
master_backup_service.cc
universe_key_registry_service.cc
cdc_rpc_tasks.cc
cdc_consumer_registry_service.cc
restore_sys_catalog_state.cc

The following files have been deleted from ent folder and the code merged into the equivalent src
folder file:
ts_descriptor.cc
external_mini_cluster_ent.cc
catalog_manager-test_ent.cc

The following tests have been moved to equivalent src folder:
encryption-test
secure_connection_test
transaction-ent-test -> transaction-test
cluster_balance_preferred_leader-test
restore_sys_catalog_state_test
master-test_ent -> master_xrepl-test

catalog_manager-test_ent has been deleted and its tests moved into catalog_manager-test

Fixes #16330

Test Plan:
All jenkins tests
encryption-test
secure_connection_test
transaction-test
cluster_balance_preferred_leader-test
restore_sys_catalog_state_test
master_xrepl-test
catalog_manager-test

Reviewers: asrivastava, bogdan, rsami, jhe

Reviewed By: jhe

Subscribers: ybase, slingam

Differential Revision: https://phabricator.dev.yugabyte.com/D23374

--- a/src/yb/master/CMakeLists.txt
+++ b/src/yb/master/CMakeLists.txt
@@ -72,6 +72,7 @@ include_directories(${YB_BUILD_ROOT}/postgres/include/server)
 set(MASTER_SRCS
   async_flush_tablets_task.cc
   async_rpc_tasks.cc
+  async_snapshot_tasks.cc
   auto_flags_orchestrator.cc
   master_call_home.cc
   backfill_index.cc
@@ -80,6 +81,8 @@ set(MASTER_SRCS
   catalog_entity_info.cc
   catalog_manager_bg_tasks.cc
   catalog_loaders.cc
+  cdc_consumer_registry_service.cc
+  cdc_rpc_tasks.cc
   scoped_leader_shared_lock.cc
   cluster_balance.cc
   cluster_balance_util.cc
@@ -88,6 +91,7 @@ set(MASTER_SRCS
   flush_manager.cc
   master.cc
   master_admin_service.cc
+  master_backup_service.cc
   master_client_service.cc
   master_cluster_service.cc
   master_dcl_service.cc
@@ -103,6 +107,7 @@ set(MASTER_SRCS
   mini_master.cc
   master_snapshot_coordinator.cc
   restoration_state.cc
+  restore_sys_catalog_state.cc
   snapshot_coordinator_context.cc
   snapshot_schedule_state.cc
   snapshot_state.cc
@@ -116,6 +121,7 @@ set(MASTER_SRCS
   tasks_tracker.cc
   ts_descriptor.cc
   ts_manager.cc
+  universe_key_registry_service.cc
   util/yql_vtable_helpers.cc
   xcluster/xcluster_consumer_metrics.cc
   xcluster/xcluster_safe_time_service.cc
@@ -216,6 +222,9 @@ ADD_YB_TEST(sys_catalog-test)
 Add_YB_TEST(table_index-test)
 ADD_YB_TEST(xcluster/xcluster_safe_time_service-test)
 ADD_YB_TEST(stateful_service-test)
+ADD_YB_TEST(restore_sys_catalog_state_test)
+ADD_YB_TEST(cluster_balance_preferred_leader-test)
+ADD_YB_TEST(master_xrepl-test)
 
 foreach(ADDITIONAL_TEST ${MASTER_ADDITIONAL_TESTS})
   ADD_YB_TEST(${ADDITIONAL_TEST})
