[PLAT-7692]: Change default AWS instance type to c5.4xlarge
Summary:
Make the default as c5.4x large in the code
Then change the runtime config to c5.large in the dev portal with help of Arpit

We want our defaults to be c5.4xlarge (16 vCPUs and 32 gb) as we want default deployments to be optimized for good performance. But we want to limit our portal
deployments to a lower instance type as most of our internal deployments don't run heavy workloads

Test Plan:
Please refer to screenshot
{F35218}

Reviewers: jmak

Reviewed By: jmak

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23417

--- a/managed/src/main/resources/reference.conf
+++ b/managed/src/main/resources/reference.conf
@@ -289,7 +289,7 @@ yb {
     default_volume_count = 1
 
     # Default AWS instance type
-    default_instance_type = "c5.large"
+    default_instance_type = "c5.4xlarge"
 
     # default volume size for aws instance types with EBS Only storage info
     default_volume_size_gb = 250
